--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.4",
     "less": "^3.11.1",
     "less-loader": "^6.1.0",
+    "vant": "^2.8.2",
     "vue": "^3.0.0-beta.1",
     "vue-router": "^4.0.0-alpha.5",
     "vuex": "^4.0.0-alpha.1"
