--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-  "printWidth": 120,
+  "tabWidth": 2,
+  "printWidth": 200,
   "semi": false,
-  "singleQuote": true,
-  "bracketSpacing": true
+  "singleQuote": true
 }
